--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "angularfire": "^2.3.0",
+    "bootstrap": "^4.5.0",
     "firebase": "^7.17.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
