--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@angular/core": "~10.0.5",
     "@angular/fire": "^6.0.2",
     "@angular/forms": "~10.0.5",
+    "@angular/localize": "~10.0.5",
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "angularfire": "^2.3.0",
     "bootstrap": "^4.5.0",
     "firebase": "^7.17.1",
